--- a/overlays/dev/kustomization.yml
+++ b/overlays/dev/kustomization.yml
@@ -21,6 +21,8 @@ images:
 - name: ghcr.io/biosimulations/simulators-api
   newTag: sha-c6efbb7
 
+- name: hdfgroup/hsds
+  newTag: v0.7beta8
 #scale down dev deployment
 replicas:
 - count: 0
