Revert "remove override from both containers"
This reverts commit 7303967f04ea103f31f2c66b0b93d83bda7dd958.

--- a/base/apps/hsds-service.yaml
+++ b/base/apps/hsds-service.yaml
@@ -85,7 +85,9 @@ spec:
             - name: config
               mountPath: "/config/config.yaml"
               subPath: config.yaml
-
+            - name: override
+              mountPath: "/config/override.yaml"
+              subPath: override.yaml
         - name: dn
           image: hdfgroup/hsds:v0.7beta8
           lifecycle:
