Revert "remove hsds overried"
This reverts commit 1ed11f013c12be8d6a9e78abb3e75cfa4bd0f8c9.

--- a/base/apps/hsds-service.yaml
+++ b/base/apps/hsds-service.yaml
@@ -126,7 +126,9 @@ spec:
             - name: config
               mountPath: "/config/config.yaml"
               subPath: config.yaml
-
+            - name: override
+              mountPath: "/config/override.yaml"
+              subPath: override.yaml
       volumes:
         - name: accounts
           secret:
@@ -134,3 +136,6 @@ spec:
         - name: config
           configMap:
             name: hsds-config
+        - name: override
+          configMap:
+            name: hsds-override
