--- a/hack/nats-jetstream-controller/kustomization.yaml
+++ b/hack/nats-jetstream-controller/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - crds.yml
-  - rbac.yml
-  - deploy.yml
+  - crds.yaml
+  - rbac.yaml
+  - deploy.yaml
