--- a/overlays/dev/kustomization.yaml
+++ b/overlays/dev/kustomization.yaml
@@ -3,50 +3,53 @@ kind: Kustomization
 
 # Change namespace, labels, and name to dev
 commonLabels:
-  environment: prod
-namespace: prod
+  environment: dev
+namespace: dev
 
 #Change the tag on the images
+
 images:
 - name: ghcr.io/biosimulations/account-api
-  newTag: sha-667b76b
+  newTag: sha-a7e3928
 - name: ghcr.io/biosimulations/api
-  newTag: sha-667b76b
+  newTag: sha-a7e3928
 - name: ghcr.io/biosimulations/combine-api
-  newTag: sha-667b76b
+  newTag: sha-a7e3928
 - name: ghcr.io/biosimulations/dispatch-service
-  newTag: sha-667b76b
+  newTag: sha-a7e3928
 - name: ghcr.io/biosimulations/mail-service
-  newTag: sha-667b76b
+  newTag: sha-a7e3928
 - name: ghcr.io/biosimulations/simulators-api
-  newTag: sha-667b76b
-
-
-#scale up prod ev deployment
+  newTag: sha-a7e3928
+- name: hdfgroup/hsds
+  newTag: v0.7beta8
+#scale down dev deployment
 replicas:
 - count: 0
   name: account-api
 - count: 3
   name: api
-- count: 3
+- count: 2
   name: dispatch-service
-- count: 3
+- count: 5
   name: hsds
-- count: 3
+- count: 2
   name: mail-service
-- count: 3
+- count: 1
   name: simulators-api
-- count: 3
+- count: 2
   name: combine-api
-#Use the prod version of the secrets and ingress
+
+#Use the development version of the secrets and ingress
 resources:
-- prod.yml
-- ../../secrets/prod
-- ../../config/prod
-- biosimulations-ingress.yml
-- biosimulators-ingress.yml
+- dev.yaml
+- combine-ingress.yaml
+- api-ingress.yaml
+- hsds-ingress.yaml
+- biosimulators-ingress.yaml
+- ../../secrets/dev
+- ../../config/dev
 - ../../base
 
-
 patchesStrategicMerge:
-- resources.yml
+- resources.yaml
