--- a/cluster/argo-workflows/ingress.yaml
+++ b/cluster/argo-workflows/ingress.yaml
@@ -5,15 +5,14 @@ metadata:
   namespace: argo
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    kubernetes.io/ingress.class: nginx
-    ingress.kubernetes.io/rewrite-target: /$2
+    kubernetes.io/ingress.class: nginx    
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   rules:
   - host: workflows.api.biosimulations.org
     http:
       paths:
-      - path: /argo(/|$)(.*)
+      - path: /
         pathType: Prefix
         backend:
           service: 
