--- a/cluster/argocd/applications.yaml
+++ b/cluster/argocd/applications.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argo-cd
+  name: all-applications
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: 'ssh://git@github.com/biosimulations/deployment.git'
-    path: cluster/argocd
+    path: cluster/applications
     targetRevision: HEAD
   destination:
     server: 'https://kubernetes.default.svc'
@@ -15,5 +15,5 @@ spec:
     syncOptions:
       - CreateNamespace=true
     automated:
-      prune: true
+      prune: false
       selfHeal: true
