--- a/cluster/argocd/kustomization.yaml
+++ b/cluster/argocd/kustomization.yaml
@@ -1,17 +1,22 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
+
+
+
+  
 # additional resources like ingress rules, cluster and repository secrets.
 resources:
-- argo-cd.yaml
+- install.yaml
 - argo-ingress.yaml
-- https://raw.githubusercontent.com/argoproj/argo-cd/v2.2.0-rc1/manifests/ha/install.yaml
+- applications.yaml
 - overlay/argocd-repositories.yaml
+- ../../secrets/cluster
 
 # changes to config maps
-patchesStrategicMerge:
-- overlay/argo-cm-rbac.yaml
-- overlay/argo-cm.yaml
-- overlay/argo-cd-known-hosts.yaml
 
+patchesStrategicMerge:
+- overlay/argo-cm.yaml
+- overlay/argo-cm-rbac.yaml
+- overlay/argo-cd-known-hosts.yaml
 
