--- a/cluster/argocd/overlay/argo-cm.yaml
+++ b/cluster/argocd/overlay/argo-cm.yaml
@@ -76,7 +76,7 @@ data:
   #application.instanceLabelKey: mycompany.com/appname
 
   # disables admin user. Admin is enabled by default
-  admin.enabled: "true"
+  admin.enabled: "false"
   # add an additional local user with apiKey and login capabilities
   #   apiKey - allows generating API keys
   #   login - allows to login using UI
@@ -91,7 +91,7 @@ data:
   # - The path should be specified relative to the "/shared/app" directory; not as an absolute path.
   # Remote CSS Files:
   # - Files may also be loaded from remote locations via fully qualified URLs.
-  ui.cssurl: "https://static.biosimulations.org/argo-styles.css"
+  ui.cssurl: "https://static.biosimulations.org/stylesheets/biosimulations_argo.css"
 
   # An optional user-defined banner message that's displayed at the top of every UI page.
   # Every time this is updated, it will clear a user's localStorage telling the UI to hide the banner forever.
