add urls for k8s services on test

--- a/config/pr-3691/shared.env
+++ b/config/pr-3691/shared.env
@@ -49,3 +49,7 @@ HSDS_CLIENT_MAX_RETRIES=12
 
 #Public URLS
 DISPATCH_URL=https://api.biosimulations.dev/
+
+API_URL= http://api
+COMBINE_API_URL= http://combine-api
+SIMULATORS_API_URL= http://simulators-api
