tweak urls and config

--- a/config/pr-3691/shared.env
+++ b/config/pr-3691/shared.env
@@ -53,3 +53,9 @@ DISPATCH_URL=https://api.biosimulations.dev/
 API_URL= http://api
 COMBINE_API_URL= http://combine-api
 SIMULATORS_API_URL= http://simulators-api
+STORAGE_URL = http://hsds
+
+API_EXTERNAL_URL= https://pr3691.api.biosimulations.dev
+COMBINE_API_EXTERNAL_URL= https://combine.pr3691.api.biosimulations.dev
+SIMULATORS_API_EXTERNAL_URL= https://api.biosimulators.dev
+STORAGE_EXTERNAL_URL = https://data.biosimulations.dev
