--- a/cluster/applications/argo-cd.yaml
+++ b/cluster/applications/argo-cd.yaml
@@ -15,5 +15,5 @@ spec:
     syncOptions:
       - CreateNamespace=true
     automated:
-      prune: false
-      selfHeal: false
+      prune: true
+      selfHeal: true
