--- a/cluster/applications/argo-rollouts.yaml
+++ b/cluster/applications/argo-rollouts.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: argo-rollouts
+  name-space: argo-rollouts
 spec:
   project: default
   source:
