--- a/config/dev/shared.env
+++ b/config/dev/shared.env
@@ -26,8 +26,8 @@ NATS_HOST=nats://nats:4222
 #NATS_QUEUE=
 
 # Storage bucket
-STORAGE_ENDPOINT=https://files-dev.biosimulations.org/s3/
-STORAGE_EXTERNAL_ENDPOINT=https://files-dev.biosimulations.org/s3/
+STORAGE_ENDPOINT=https://s3low.scality.uchc.edu
+STORAGE_EXTERNAL_ENDPOINT=https://s3low.scality.uchc.edu
 STORAGE_PUBLIC_ENDPOINT=https://files-dev.biosimulations.org/s3/
 STORAGE_BUCKET=biosimdev
 #STORAGE_ACCESS_KEY=
