--- a/overlays/dev/hsds-ingress.yaml
+++ b/overlays/dev/hsds-ingress.yaml
@@ -4,6 +4,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
+    nginx.org/client-max-body-size: "100m"
 
   name: dev-hsds-ingress
   labels:
