--- a/base/apps/api.yaml
+++ b/base/apps/api.yaml
@@ -29,6 +29,19 @@ spec:
         - name: api
           image: "ghcr.io/biosimulations/api"
           imagePullPolicy: "Always"
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 3333
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 3333
+            initialDelaySeconds: 10
+            periodSeconds: 10
+
           ports:
             - containerPort: 3333
           volumeMounts:
