--- a/base/apps/api.yaml
+++ b/base/apps/api.yaml
@@ -29,6 +29,13 @@ spec:
         - name: api
           image: "ghcr.io/biosimulations/api"
           imagePullPolicy: "Always"
+          resources:
+            requests: 
+              memory: "1Gi"
+              cpu: "25m"
+            limits:
+              memory: "2Gi"
+              cpu: "1000m"
           livenessProbe:
             httpGet:
               path: /health
