--- a/base/apps/dispatch-service.yaml
+++ b/base/apps/dispatch-service.yaml
@@ -29,6 +29,13 @@ spec:
         - name: dispatch-service
           image: "ghcr.io/biosimulations/dispatch-service"
           imagePullPolicy: "Always"
+          resources:
+            requests: 
+              memory: "1Gi"
+              cpu: "25m"
+            limits:
+              memory: "2Gi"
+              cpu: "1000m"
           volumeMounts:
             - name: config
               mountPath: "/app/config"
