--- a/config/dev/hsds/config.yaml
+++ b/config/dev/hsds/config.yaml
@@ -28,7 +28,7 @@ dn_ram: 3g # memory for DN container (per container)
 sn_port: 5101 # Start sn ports at 5101
 sn_ram: 1g # memory for SN container
 rangeget_port: 6900 # singleton proxy at port 6900
-rangeget_ram: 1g # memoruy for RANGEGET container
+rangeget_ram: 1g # memory for RANGEGET container
 target_sn_count: 0 # desired number of SN containers
 target_dn_count: 0 # desire number of DN containers
 #! The log level will affect cloud billing costs. 
