add storage to grafana

--- a/cluster/grafana/deployment.yaml
+++ b/cluster/grafana/deployment.yaml
@@ -30,5 +30,6 @@ spec:
       restartPolicy: Always
       #todo add persistent storage
       volumes:
-        - emptyDir: {}
-          name: data
+        - name: data
+          persistentVolumeClaim:
+            claimName: grafana-storage
