--- a/cluster/applications/loki.yaml
+++ b/cluster/applications/loki.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   project: default
   source:
-    chart: grafana/loki
+    chart: loki
     repoURL: https://grafana.github.io/helm-charts
-    targetRevision: 6.20.3
+    targetRevision: loki-2.8.4
     helm:
       releaseName: loki
   destination:
