--- a/cluster/applications/loki.yaml
+++ b/cluster/applications/loki.yaml
@@ -13,3 +13,9 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
