--- a/cluster/argocd/kustomization.yaml
+++ b/cluster/argocd/kustomization.yaml
@@ -1,10 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
- 
+namespace: argocd
+
+
+
+  
 # additional resources like ingress rules, cluster and repository secrets.
 resources:
 - https://raw.githubusercontent.com/argoproj-labs/argocd-image-updater/stable/manifests/install.yaml
-- https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/ha/install.yaml
+- install.yaml
 - argo-ingress.yaml
 - applications.yaml
 - overlay/argocd-repositories.yaml
