--- a/cluster/argocd/kustomization.yaml
+++ b/cluster/argocd/kustomization.yaml
@@ -1,18 +1,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
-
-
-
   
 # additional resources like ingress rules, cluster and repository secrets.
 resources:
 - https://raw.githubusercontent.com/argoproj-labs/argocd-image-updater/stable/manifests/install.yaml
+- https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/ha/install.yaml
 - install.yaml
 - argo-ingress.yaml
 - applications.yaml
 - overlay/argocd-repositories.yaml
-- ../../secrets/cluster
+- ../../secrets/cluster/argocd-repocreds.yaml
 
 # changes to config maps
 
@@ -20,4 +18,10 @@ patchesStrategicMerge:
 - overlay/argo-cm.yaml
 - overlay/argo-cm-rbac.yaml
 - overlay/argo-cd-known-hosts.yaml
+- ../../secrets/cluster/argo-secret.yaml
+
+
+      
+
+
 
