--- a/cluster/prometheus/deployment.yaml
+++ b/cluster/prometheus/deployment.yaml
@@ -6,6 +6,10 @@ spec:
   replicas: 1
   template:
     spec:
+    # To get storage working. See https://stackoverflow.com/questions/60727107/how-can-i-give-grafana-user-appropriate-permission-so-that-it-can-start-successf
+      securityContext:
+        runAsUser: 0
+        fsGroup: 0
       serviceAccountName: prometheus-server
       containers:
         - name: prometheus
