--- a/cluster/nginx-ingress/metrics.yaml
+++ b/cluster/nginx-ingress/metrics.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
- annotations:
-   prometheus.io/scrape: "true"
-   prometheus.io/port: "10254"
+  name: ingress-nginx-controller
+  namespace: ingress-nginx
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "10254"
 spec:
   ports:
     - name: prometheus
