--- a/cluster/grafana/deployment.yaml
+++ b/cluster/grafana/deployment.yaml
@@ -1,20 +1,25 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: grafana
   namespace: monitoring
 spec:
-  strategy:
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
-    type: RollingUpdate
+  serviceName: grafana
+  replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: grafana
+  volumeClaimTemplate:
+    - metadata:
+        name: grafana-data
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: 100Gi
   template:
-    spec:
-      # To get storage working. See https://stackoverflow.com/questions/60727107/how-can-i-give-grafana-user-appropriate-permission-so-that-it-can-start-successf
-      securityContext:
-        runAsUser: 0
-        fsGroup: 0
+    spec:      
       containers:
         - image: grafana/grafana
           name: grafana
@@ -30,9 +35,5 @@ spec:
               memory: 100Mi
           volumeMounts:
             - mountPath: /var/lib/grafana
-              name: data
+              name: grafana-data
       restartPolicy: Always
-      volumes:
-        - name: data
-          persistentVolumeClaim:
-            claimName: grafana-storage
