--- a/cluster/grafana/deployment.yaml
+++ b/cluster/grafana/deployment.yaml
@@ -9,7 +9,7 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: grafana
-  volumeClaimTemplate:
+  volumeClaimTemplates:
     - metadata:
         name: grafana-data
       spec:
