feat: update dispatch-service to Singularity 3.9.2

--- a/config/prod/dispatch-service/config.env
+++ b/config/prod/dispatch-service/config.env
@@ -1,9 +1,20 @@
+# directories
+HPC_HOME_DIR=/home/FCAM/crbmapi
+HPC_BASE_DIR=/home/FCAM/crbmapi/nfs/biosimulations/prod/simulations
+
+# executables
+HPC_EXECUTABLES_PATH="PATH=$PATH"
+
+# modules
+HPC_MODULE_PATH=/isg/shared/modulefiles
+HPC_MODULE_INIT_SCRIPT=/usr/share/Modules/init/bash
+
 # SLURM settings
 HPC_SLURM_PARTITION=crbm
 HPC_SLURM_QOS=general
 
 # Singularity settings
-HPC_SINGULARITY_MODULE=singularity/3.7.1-biosim
+HPC_SINGULARITY_MODULE=singularity/3.9.2
 HPC_SINGULARITY_CACHE_DIR=/home/FCAM/crbmapi/singularity/cache/
 HPC_SINGULARITY_PULL_FOLDER=/home/FCAM/crbmapi/singularity/images/
 
