--- a/config/prod/dispatch-service/config.env
+++ b/config/prod/dispatch-service/config.env
@@ -9,7 +9,10 @@ HPC_EXECUTABLES_PATH="PATH=$PATH"
 HPC_MODULE_PATH=/isg/shared/modulefiles
 HPC_MODULE_INIT_SCRIPT=/usr/share/Modules/init/bash
 
-# SLURM settings
+# hardware requirements
+HPC_SLURM_CONSTRAINTS=SSE42
+
+# SLURM partition
 HPC_SLURM_PARTITION=crbm
 HPC_SLURM_QOS=general
 
