--- a/config/prod/dispatch-service/config.env
+++ b/config/prod/dispatch-service/config.env
@@ -14,7 +14,7 @@ HPC_SLURM_CONSTRAINTS=SSE42
 
 # SLURM partition
 HPC_SLURM_PARTITION=crbm
-HPC_SLURM_QOS=general
+HPC_SLURM_QOS=simulations
 
 # Singularity settings
 HPC_SINGULARITY_MODULE=singularity/3.9.2
