--- a/overlays/dev/combine-ingress.yaml
+++ b/overlays/dev/combine-ingress.yaml
@@ -7,6 +7,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/proxy-body-size: "1100m"
+    nginx.org/client-max-body-size: "1100m"
     
 spec:
   tls:
