feat: switched to global UCHC partition

--- a/config/dev/dispatch-service/config.env
+++ b/config/dev/dispatch-service/config.env
@@ -10,10 +10,10 @@ HPC_MODULE_PATH=/isg/shared/modulefiles
 HPC_MODULE_INIT_SCRIPT=/usr/share/Modules/init/bash
 
 # hardware requirements
-HPC_SLURM_CONSTRAINTS=SSE42
+HPC_SLURM_CONSTRAINTS=simulations&SSE42
 
 # SLURM partition
-HPC_SLURM_PARTITION=crbm
+HPC_SLURM_PARTITION=global
 HPC_SLURM_QOS=simulations
 
 # Singularity settings
