--- a/config/prod/combine-api/config.env
+++ b/config/prod/combine-api/config.env
@@ -3,3 +3,7 @@ RUN_COMBINE_ARCHIVE_TIMEOUT=30.0
 
 # bytes
 MAX_CONTENT_LENGTH=256e6
+
+# S3 prefix and maximum age for temporarily created COMBINE archives
+TEMP_COMBINE_ARCHIVE_S3_PREFIX=temp/createdCombineArchive/
+TEMP_COMBINE_ARCHIVE_MAX_AGE=1
