update config for google cloud buckets

--- a/config/dev/shared.env
+++ b/config/dev/shared.env
@@ -21,10 +21,10 @@ NATS_HOST=nats://nats:4222
 #NATS_QUEUE=
 
 # Storage bucket
-STORAGE_ENDPOINT=https://s3low.scality.uchc.edu
-STORAGE_EXTERNAL_ENDPOINT=https://s3low.scality.uchc.edu
-STORAGE_PUBLIC_ENDPOINT=https://files-dev.biosimulations.org/s3/
-STORAGE_BUCKET=biosimdev
+STORAGE_ENDPOINT=https://storage.googleapis.com
+STORAGE_EXTERNAL_ENDPOINT=https://storage.googleapis.com
+STORAGE_BUCKET=files.biosimulations.dev
+TEMP_STORAGE_BUCKET=biosim-temp-dev
 #STORAGE_ACCESS_KEY=
 #STORAGE_SECRET=
 
