--- a/config/dev/hsds/config.yaml
+++ b/config/dev/hsds/config.yaml
@@ -20,7 +20,7 @@ azure_storage_account: null # storage account to use on Azure
 azure_resource_group: null # Azure resource group the container (BUCKET_NAME) belongs to
 root_dir: null # base directory to use for Posix storage
 password_salt: null # salt value if dynamically generated passwords are used
-bucket_name: biosim-hsds-dev # set to use a default bucket, otherwise bucket param is needed for all requests
+bucket_name: biosimdev # set to use a default bucket, otherwise bucket param is needed for all requests
 head_port: 5100 # port to use for head node
 head_ram: 512m # memory for head container
 dn_port: 6101 # Start dn ports at 6101
