fixed loading paths for service node as well. This wasnt needed before, but now I am seeing errors even for the uconn bucket. must be a that the service node is the one that deals with domains etc which is why loading data works for this node

--- a/base/apps/hsds-service.yaml
+++ b/base/apps/hsds-service.yaml
@@ -72,21 +72,15 @@ spec:
                 secretKeyRef:
                   name: aws-auth-keys
                   key: aws_secret_access_key
-            - name: AWS_REGION
-              value: us-east-1
-            - name: BUCKET_NAME
-              value: biosimdev
-            - name: LOG_LEVEL
-              value: WARN
           volumeMounts:
             - name: accounts
               mountPath: "/config/passwd.txt"
               subPath: passwd.txt
             - name: config
-              mountPath: "/config/config.yaml"
+              mountPath: "/config/config.yml"
               subPath: config.yaml
             - name: override
-              mountPath: "/config/override.yaml"
+              mountPath: "/config/override.yml"
               subPath: override.yaml
         - name: dn
           image: hdfgroup/hsds:v0.7beta8
