--- a/overlays/dev/hsds-ingress.yaml
+++ b/overlays/dev/hsds-ingress.yaml
@@ -4,8 +4,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
-    nginx.org/client-max-body-size: "100m"
+    nginx.ingress.kubernetes.io/proxy-body-size: "300m"
+    nginx.org/client-max-body-size: "300m"
 
   name: dev-hsds-ingress
   labels:
@@ -53,7 +53,14 @@ spec:
           service:
             name: hsds
             port: 
-              number: 80              
+              number: 80          
+      - pathType: Prefix
+        path: "/info"
+        backend:
+          service:
+            name: hsds
+            port: 
+              number: 80          
       - pathType: Prefix
         path: "/"
         backend:
