refactor: aligned configuration for temporary storage of COMBINE archives with config/ in main repository

--- a/config/dev/combine-api/config.env
+++ b/config/dev/combine-api/config.env
@@ -5,5 +5,4 @@ RUN_COMBINE_ARCHIVE_TIMEOUT=30.0
 MAX_CONTENT_LENGTH=1.1e9
 
 # S3 prefix and maximum age for temporarily created COMBINE archives
-TEMP_COMBINE_ARCHIVE_S3_PREFIX=temp/createdCombineArchive/
-TEMP_COMBINE_ARCHIVE_MAX_AGE=1
+TEMP_STORAGE_MAX_AGE=1
