--- a/config/dev/shared.env
+++ b/config/dev/shared.env
@@ -20,7 +20,7 @@ HPC_SSH_USERNAME=crbmapi
 NATS_HOST=nats://nats:4222
 #NATS_QUEUE=
 
-# Storage bucket
+# Storage buckets
 STORAGE_ENDPOINT=https://storage.googleapis.com
 STORAGE_EXTERNAL_ENDPOINT=https://storage.googleapis.com
 STORAGE_BUCKET=files.biosimulations.dev
