--- a/config/prod/shared.env
+++ b/config/prod/shared.env
@@ -20,11 +20,12 @@ HPC_SSH_USERNAME=crbmapi
 NATS_HOST=nats://nats:4222
 #NATS_QUEUE=
 
-# Storage bucket
+# Storage buckets
 STORAGE_ENDPOINT=https://s3low.scality.uchc.edu
 STORAGE_EXTERNAL_ENDPOINT=https://s3low.scality.uchc.edu
 STORAGE_PUBLIC_ENDPOINT=https://files.biosimulations.org/s3/
 STORAGE_BUCKET=biosimprod
+TEMP_STORAGE_BUCKET=biosim-temp-prod
 #STORAGE_ACCESS_KEY=
 #STORAGE_SECRET=
 
