refactor: moved max age from temporary storage from combine-api to shared config

--- a/config/dev/shared.env
+++ b/config/dev/shared.env
@@ -25,6 +25,7 @@ STORAGE_ENDPOINT=https://storage.googleapis.com
 STORAGE_EXTERNAL_ENDPOINT=https://storage.googleapis.com
 STORAGE_BUCKET=files.biosimulations.dev
 TEMP_STORAGE_BUCKET=biosim-temp-dev
+TEMP_STORAGE_MAX_AGE=1
 #STORAGE_ACCESS_KEY=
 #STORAGE_SECRET=
 
