refactor: updated configuration for temporary prod bucket

--- a/config/prod/shared.env
+++ b/config/prod/shared.env
@@ -26,6 +26,7 @@ STORAGE_EXTERNAL_ENDPOINT=https://s3low.scality.uchc.edu
 STORAGE_PUBLIC_ENDPOINT=https://files.biosimulations.org/s3/
 STORAGE_BUCKET=biosimprod
 TEMP_STORAGE_BUCKET=biosim-temp-prod
+TEMP_STORAGE_MAX_AGE=1
 #STORAGE_ACCESS_KEY=
 #STORAGE_SECRET=
 
