update storage bucket to google cloud

--- a/config/prod/shared.env
+++ b/config/prod/shared.env
@@ -21,8 +21,8 @@ NATS_HOST=nats://nats:4222
 #NATS_QUEUE=
 
 # Storage buckets
-STORAGE_ENDPOINT=https://s3low.scality.uchc.edu
-STORAGE_BUCKET=biosimprod
+STORAGE_ENDPOINT=https://storage.googleapis.com
+STORAGE_BUCKET=files.biosimulations.org
 TEMP_STORAGE_BUCKET=biosim-temp-prod
 TEMP_STORAGE_MAX_AGE=1
 #STORAGE_ACCESS_KEY=
