expand monitored namespaces

--- a/cluster/prometheus/prometheus.yaml
+++ b/cluster/prometheus/prometheus.yaml
@@ -7,6 +7,8 @@ scrape_configs:
     namespaces:
       names:
       - ingress-nginx
+      - argocd
+      - cert-manager
   relabel_configs:
   - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
     action: keep
