added configuration for logs for refreshing images

--- a/config/prod/dispatch-service/config.env
+++ b/config/prod/dispatch-service/config.env
@@ -1,6 +1,7 @@
 # directories
 HPC_HOME_DIR=/home/FCAM/crbmapi
 HPC_BASE_DIR=/home/FCAM/crbmapi/nfs/biosimulations/prod/simulations
+HPC_REFRESH_IMAGES_DIR=/home/FCAM/crbmapi/nfs/biosimulations/prod/images
 
 # executables
 HPC_EXECUTABLES_PATH="PATH=$PATH"
