--- a/config/dev/dispatch-service/config.env
+++ b/config/dev/dispatch-service/config.env
@@ -1,6 +1,7 @@
 # directories
 HPC_HOME_DIR=/home/FCAM/crbmapi
 HPC_BASE_DIR=/home/FCAM/crbmapi/nfs/biosimulations/dev/simulations
+HPC_REFRESH_IMAGES_DIR=/home/FCAM/crbmapi/nfs/biosimulations/dev/images
 
 # executables
 HPC_EXECUTABLES_PATH="PATH=$PATH"
