feat: added configuration for storage bucket region

--- a/config/dev/shared.env
+++ b/config/dev/shared.env
@@ -23,6 +23,7 @@ NATS_HOST=nats://nats:4222
 # Storage buckets
 STORAGE_ENDPOINT=https://storage.googleapis.com
 STORAGE_BUCKET=files.biosimulations.dev
+STORAGE_REGION=us-east-1
 TEMP_STORAGE_BUCKET=biosim-temp-dev
 TEMP_STORAGE_MAX_AGE=1
 #STORAGE_ACCESS_KEY=
