--- a/config/dev/hsds/config.yaml
+++ b/config/dev/hsds/config.yaml
@@ -33,7 +33,7 @@ rangeget_ram: 1g # memoruy for RANGEGET container
 target_sn_count: 0 # desired number of SN containers
 target_dn_count: 0 # desire number of DN containers
 #! The log level will affect cloud billing costs. 
-log_level: ERROR # log level.  One of ERROR, WARNING, INFO, DEBUG
+log_level: WARNING # log level.  One of ERROR, WARNING, INFO, DEBUG
 log_prefix: null
 max_tcp_connections: 100 # max number of inflight tcp connections
 head_sleep_time: 10 # max sleep time between health checks for head node
@@ -48,7 +48,7 @@ min_chunk_size: 1m # 1 MB
 max_chunk_size: 4m # 4 MB
 max_request_size: 300m # 100 MB - should be no smaller than client_max_body_size in nginx tmpl
 max_chunks_per_folder: 0 # max number of chunks per s3 folder. 0 for unlimiited
-max_task_count: 200 # maximum number of concurrent tasks before server will return 503 error
+max_task_count: 100 # maximum number of concurrent tasks before server will return 503 error
 aio_max_pool_connections: 64 # number of connections to keep in conection pool for aiobotocore requests
 metadata_mem_cache_size: 128m # 128 MB - metadata cache size per DN node
 metadata_mem_cache_expire: 3600 # expire cache items after one hour
