use "replace"  to sync prom operator see https://github.com/prometheus-community/helm-charts/issues/1500#issuecomment-968892923

--- a/cluster/applications/prometheus-operator.yaml
+++ b/cluster/applications/prometheus-operator.yaml
@@ -15,6 +15,7 @@ spec:
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
+      - Replace=true
     automated:
       prune: true
       selfHeal: true
