change app name

--- a/cluster/applications/prometheus-using-operator.yaml
+++ b/cluster/applications/prometheus-using-operator.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus
+  name: prometheus-using-operator
   namespace: argocd
 spec:
   project: default
