include monitoring poproperly

--- a/cluster/nginx-ingress/kustomization.yaml
+++ b/cluster/nginx-ingress/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.0/deploy/static/provider/cloud/deploy.yaml
 - prod-issuer.yaml
 - staging-issuer.yaml
+- monitor.yaml
 
 patchesStrategicMerge:
   - replicas.yaml
