update nginx organization

--- a/cluster/applications/nginx-ingress.yaml
+++ b/cluster/applications/nginx-ingress.yaml
@@ -13,6 +13,8 @@ spec:
     server: "https://kubernetes.default.svc"
     namespace: ingress-nginx
   syncPolicy:
-    automated: {}
+    automated: 
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
