--- a/cluster/nginx-ingress/kustomization.yaml
+++ b/cluster/nginx-ingress/kustomization.yaml
@@ -2,11 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: ingress-nginx
 resources:
-- https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.0/deploy/static/provider/cloud/deploy.yaml
+- base.yaml
 - prod-issuer.yaml
 - staging-issuer.yaml
-- monitor.yaml
+
 
 patchesStrategicMerge:
   - replicas.yaml
-  - metrics.yaml
