add setting prefix

--- a/cluster/prometheus/values.yaml
+++ b/cluster/prometheus/values.yaml
@@ -1,3 +1,4 @@
-prometheusOperator:
-  admissionWebhooks:
-    enabled: false
+kube-prometheus-stack:
+  prometheusOperator:
+    admissionWebhooks:
+      enabled: false
