update prom namespace selectors

--- a/cluster/prometheus/values.yaml
+++ b/cluster/prometheus/values.yaml
@@ -4,3 +4,7 @@ kube-prometheus-stack:
       enabled: false
     admissionWebhooks:
       enabled: false
+  prometheus:
+  prometheusSpec:
+    podMonitorSelectorNilUsesHelmValues: false
+    serviceMonitorSelectorNilUsesHelmValues: false
