set namespace to all

--- a/cluster/prometheus/values.yaml
+++ b/cluster/prometheus/values.yaml
@@ -8,3 +8,4 @@ kube-prometheus-stack:
     prometheusSpec:
       podMonitorSelectorNilUsesHelmValues: false
       serviceMonitorSelectorNilUsesHelmValues: false
+      ruleSelectorNilUsesHelmValues: false
